Modify state dict

--- a/colab/train_pixelcnn.ipynb
+++ b/colab/train_pixelcnn.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "!python3 train_pixelcnn.py\\\n",
     "    --dataset=\"cifar10\"\\\n",
-    "    --data_dir=\"/content/drive/MyDrive\"\\\n",
+    "    --data_dir=\"/content/drive/MyDrive/datasets\"\\\n",
     "    --save_dir=\"/content/drive/MyDrive/vqvae/pixelcnn-cifar10/\"\\\n",
     "    --vqvae_params=\"/content/drive/MyDrive/vqvae/vqvae-cifar10/epoch=80-val_loss=0.164.pth\"\\\n",
     "    --n_epochs=300\\\n",
