--- a/colab/train_vqvae.ipynb
+++ b/colab/train_vqvae.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "!python3 train_vqvae.py\\\n",
     "    --dataset=\"cifar10\"\\\n",
-    "    --data_dir=\"/content/drive/MyDrive\"\\\n",
+    "    --data_dir=\"/content/drive/MyDrive/datasets\"\\\n",
     "    --save_dir=\"/content/drive/MyDrive/vqvae/vqvae-cifar10/\"\\\n",
     "    --n_epochs=300\\\n",
     "    --batch_size=128\\\n",
